<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/user_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        tools:srcCompat="@tools:sample/avatars[0]" />

    <TextView
        android:id="@+id/SoccerTeamMan"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/frontpage_screen"
<<<<<<< Updated upstream
=======
        android:textColor="#2278BE"
        android:textColorLink="#03A9F4"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.232" />

    <EditText
        android:id="@+id/fullName"
        android:layout_width="200dp"
        android:layout_height="39dp"
        android:gravity="center"
        android:hint="(Full name)"
        android:textColorHint="#77A7C4"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32" />

    <TextView
        android:id="@+id/name_static"
        android:layout_width="200dp"
        android:layout_height="25dp"
>>>>>>> Stashed changes
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
<<<<<<< Updated upstream
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.35" />
=======
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.369" />
>>>>>>> Stashed changes

    <EditText
        android:id="@+id/userName"
        android:layout_width="197dp"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/enter1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
<<<<<<< Updated upstream
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.486" />
=======
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.432" />
>>>>>>> Stashed changes

    <TextView
        android:id="@+id/name_static"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:text="@string/Name"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
<<<<<<< Updated upstream
        app:layout_constraintVertical_bias="0.535" />
=======
        app:layout_constraintVertical_bias="0.478" />
>>>>>>> Stashed changes

    <EditText
        android:id="@+id/userPassword"
        android:layout_width="202dp"
        android:layout_height="46dp"
        android:gravity="center"
<<<<<<< Updated upstream
        android:text="@string/enter2"
=======
        android:hint="(Password)"
        android:inputType="textPassword"
        android:textColorHint="#77A7C4"
        android:textSize="14sp"
>>>>>>> Stashed changes
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
<<<<<<< Updated upstream
        app:layout_constraintVertical_bias="0.588" />
=======
        app:layout_constraintVertical_bias="0.544" />
>>>>>>> Stashed changes

    <TextView
        android:id="@+id/password_static"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:text="@string/password"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
<<<<<<< Updated upstream
        app:layout_constraintVertical_bias="0.635" />
=======
        app:layout_constraintVertical_bias="0.589" />
>>>>>>> Stashed changes

    <Button
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="createAccount"
        android:text="@string/createAcc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.939" />

    <TextView
        android:id="@+id/userType"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:gravity="center"
        android:text="Select user type:"
        android:textColor="#2278BE"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.764" />

    <EditText
        android:id="@+id/passRe"
        android:layout_width="200dp"
        android:layout_height="39dp"
        android:gravity="center"
        android:hint="(Password)"
        android:inputType="textPassword"
        android:textColorHint="#77A7C4"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
<<<<<<< Updated upstream
        app:layout_constraintVertical_bias="0.731" />
=======
        app:layout_constraintVertical_bias="0.657" />

    <TextView
        android:id="@+id/passRe_static"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:gravity="center"
        android:text="Re-enter Password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="308dp"
        android:layout_height="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.835" />


>>>>>>> Stashed changes

</androidx.constraintlayout.widget.ConstraintLayout>